tests/baselines/reference/classIndexer2.errors.txt
tests/cases/compiler/classIndexer2.ts(4,5): error TS2411: Property 'y' of type '文字' is not assignable to string index type '数字'.


==== tests/cases/compiler/classIndexer2.ts (1 errors) ====
    class C123 {
        [s: string]: number;
        x: number;
        y: string;
        ~~~~~~~~~~
!!! error TS2411: Property 'y' of type '文字' is not assignable to string index type '数字'.
        constructor() {
        }
    }